--- a/Login.css
+++ b/Login.css
@@ -72,4 +72,19 @@ footer
         text-align: center;
         padding-top: 10px;
     }
-
+#footer {
+    background-color:#000;
+    background: url(images/1.jpg);
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+    height:100px;
+    overflow: hidden;       
+}
+#site_footer {    
+position: relative;  
+}
+      
+    
+   
